test/good/arrays/for10.px

a = ['a', 'q', 'x']
for x, y in a by -2, 1..10 by 3 do
    print x, y
