test/bad/loops/for12.px

t = 0, 'x'
for t in 1..2, 3...4 do
    skip
